# .dotfiles

./: .bash_profile  .gitignore  .minttyrc  .tmux.conf  .vimrc
.funcs/: findFile.sh  findText.sh  notify.sh  randomString.sh  realgit.sh  runcmd.sh
.funcs/baseWorkspace/: makeWorkspace.sh
.funcs/baseWorkspace/workspace/: CMakeLists.txt  TestRunner.cpp  run
